@@ -10,7 +10,6 @@ package org.elasticsearch.xpack.esql.action;
 import com.carrotsearch.randomizedtesting.annotations.Name;
 import com.carrotsearch.randomizedtesting.annotations.ParametersFactory;
 
-import org.elasticsearch.Build;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
@@ -148,34 +147,49 @@ public class TelemetryIT extends AbstractEsqlIntegTestCase {
                 ) },
             new Object[] {
                 new Test(
+                    """
+                        FROM idx
+                        | EVAL y = to_str(host)
+                        | RENAME host as host_left
+                        | LOOKUP JOIN lookup_idx ON host_left == host
+                        """,
+                    Map.ofEntries(
+                        Map.entry("RENAME", 1),
+                        Map.entry("FROM", 1),
+                        Map.entry("EVAL", 1),
+                        Map.entry("LOOKUP JOIN ON EXPRESSION", 1)
+                    ),
+                    Map.ofEntries(Map.entry("TO_STRING", 1)),
+                    true
+                ) },
+            new Object[] {
+                new Test(
                     "TS time_series_idx | LIMIT 10",
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
-                        ? Map.ofEntries(Map.entry("TS", 1), Map.entry("LIMIT", 1))
-                        : Collections.emptyMap(),
+                    Map.ofEntries(Map.entry("TS", 1), Map.entry("LIMIT", 1)),
                     Map.ofEntries(),
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
+                    true
                 ) },
             new Object[] {
                 new Test(
                     "TS time_series_idx | STATS max(cpu) BY host | LIMIT 10",
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
-                        ? Map.ofEntries(Map.entry("TS", 1), Map.entry("STATS", 1), Map.entry("LIMIT", 1))
-                        : Collections.emptyMap(),
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled() ? Map.ofEntries(Map.entry("MAX", 1)) : Collections.emptyMap(),
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
+                    Map.ofEntries(Map.entry("TS", 1), Map.entry("STATS", 1), Map.entry("LIMIT", 1)),
+                    Map.ofEntries(Map.entry("MAX", 1)),
+                    true
                 ) },
             new Object[] {
                 new Test(
                     """
                         FROM idx
                         | EVAL ip = TO_IP(host), x = TO_STRING(host), y = TO_STRING(host)
-                        | INLINESTATS MAX(id)
+                        | INLINE STATS MAX(id)
                         """,
-                    Build.current().isSnapshot() ? Map.of("FROM", 1, "EVAL", 1, "INLINESTATS", 1) : Collections.emptyMap(),
-                    Build.current().isSnapshot()
+                    EsqlCapabilities.Cap.INLINE_STATS.isEnabled()
+                        ? Map.of("FROM", 1, "EVAL", 1, "INLINE STATS", 1)
+                        : Collections.emptyMap(),
+                    EsqlCapabilities.Cap.INLINE_STATS.isEnabled()
                         ? Map.ofEntries(Map.entry("MAX", 1), Map.entry("TO_IP", 1), Map.entry("TO_STRING", 2))
                         : Collections.emptyMap(),
-                    Build.current().isSnapshot()
+                    EsqlCapabilities.Cap.INLINE_STATS.isEnabled()
                 ) }
         );
     }
@@ -188,6 +202,12 @@ public class TelemetryIT extends AbstractEsqlIntegTestCase {
     }
 
     public void testMetrics() throws Exception {
+        if (testCase.query().contains("LOOKUP JOIN lookup_idx ON host_left == host")) {
+            assumeTrue(
+                "requires LOOKUP JOIN ON boolean expression capability",
+                EsqlCapabilities.Cap.LOOKUP_JOIN_ON_BOOLEAN_EXPRESSION.isEnabled()
+            );
+        }
         DiscoveryNode dataNode = randomDataNode();
         testQuery(dataNode, testCase);
     }
